@@ -11,6 +11,8 @@ Czekalski for contributing to this release.
 
 {{{ Bug fixes
 
+- Fixed status bar widget editing (#3414671) (Matthieu Casanova)
+
 - Wrong chars in auxiliary fonts (Max Funk - #3474765, 3474534, 3480246)
 
 - Fixed rectangular selection constructor (patch #3440310) (peibl)
